[tool.poetry]
name = "wpp-chat-analysis"
version = "0.1.0"
description = ""
authors = ["Pedro Cunha <dev@citsec.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.16.0"
nltk = "^3.9.1"
wordcloud = "^1.9.4"
streamlit = "^1.40.2"
altair = "^5.5.0"
matplotlib = "^3.9.3"
imageio = {extras = ["ffmpeg"], version = "^2.36.1"}
pillow = "^11.0.0"
bar-chart-race = "^0.1.0"
streamlit-extras = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
